--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-# DATABASE_URL=file:./dev.db
+
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
+
+DATABASE_URL=postgresql://postgres:<railwayDbPass>@containers-us-west-18.railway.app:5897/railway
