--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,11 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "0.38.3",
     "@redwoodjs/forms": "0.38.3",
     "@redwoodjs/router": "0.38.3",
     "@redwoodjs/web": "0.38.3",
+    "@supabase/supabase-js": "1.28.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
