Dockerize test DB, update README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "scripts": {
+    "postgres:up": "docker-compose up -d",
+    "postgres:down": "docker-compose down"
+  },
   "workspaces": {
     "packages": [
       "api",
