--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-
-# TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 
 DATABASE_URL=postgresql://postgres:<railwayDbPass>@containers-us-west-18.railway.app:5897/railway
+# Attach to local docker postgres for running tests. Make sure port matches host port from docker-compose.yaml
+TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5438/postgres
