--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,4 +13,4 @@ services:
         ports:
           - '5438:5432'
         volumes:
-          - ./postgres-data:/var/lib/postgresql/data
+          - ./api/db/postgres-test-data:/var/lib/postgresql/data
