--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "0.38.3",
-    "@redwoodjs/graphql-server": "0.38.3"
+    "@redwoodjs/graphql-server": "0.38.3",
+    "node-mailjet": "3.3.4"
   }
 }
