--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,18 @@
 DATABASE_URL=postgresql://postgres:<railwayDbPass>@containers-us-west-18.railway.app:5897/railway
 # Attach to local docker postgres for running tests. Make sure port matches host port from docker-compose.yaml
 TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5438/postgres
+
+# Used to encrypt/decrypt session cookies. Change this value and re-deploy to log out all users of your app at once.
+SESSION_SECRET=
+
+MAILJET_API_KEY=
+MAILJET_API_SECRET=
+# Must use the sender email whitelisted with your mailjet account
+MAILJET_SENDER_EMAIL=
+
+
+### DEBUG FLAGS ###############################
+### WARNING: Only uncomment in development!
+
+# Uncomment below to disable calls to Mailjet and just log messages instead
+## DEBUG_DISABLE_EMAIL=true
