Rm example db connection

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 
-DATABASE_URL=postgresql://postgres:<railwayDbPass>@containers-us-west-18.railway.app:5897/railway
+DATABASE_URL=
 # Attach to local docker postgres for running tests. Make sure port matches host port from docker-compose.yaml
 TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5438/postgres
 
