--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,4 +13,6 @@ services:
         ports:
           - '5438:5432'
         volumes:
-          - ./api/db/postgres-test-data:/var/lib/postgresql/data
+          - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
