--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+Enable below for hot reload with tailwind css in development
+# NODE_ENV=development
+
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 
