--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@redwoodjs/router": "0.38.3",
     "@redwoodjs/web": "0.38.3",
     "@supabase/supabase-js": "1.28.1",
+    "classd": "1.0.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
