--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "classd": "1.0.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-modal": "3.14.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.0",
