--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "classd": "1.0.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "5.0.4",
     "react-dom": "17.0.2",
     "react-modal": "3.14.4"
   },
