--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-Enable below for hot reload with tailwind css in development
+# Enable below for hot reload with tailwind css in development
 # NODE_ENV=development
 
 # PRISMA_HIDE_UPDATE_MESSAGE=true
