Fix space path bug

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,5 @@ MAILJET_SENDER_EMAIL=
 
 # Uncomment below to disable calls to Mailjet and just log messages instead
 ## DEBUG_DISABLE_EMAIL=true
+
+REDWOOD_ENV_EXAMPLE_SPACE_ID=
